--- a/Quiz/Quiz.html
+++ b/Quiz/Quiz.html
@@ -97,7 +97,7 @@
 
         function startLook() {
             document.getElementById("div2").style.visibility = "hidden";
-            title.textContent = 'Choose Game type';
+            title.textContent = 'Choose Quiz type';
             nextBtn.textContent = 'START!';
             option1.textContent = 'True/False';
             option2.textContent = 'Multiple Questions';
